src/test/deca/context/invalid/extension/assign-float-to-int.deca
// Programme permettant de tester l'assignation d'un float dans un tableau d'entier

// Resultats erreur

{
    int[2] tab;
    tab[1] = 2.3;
}